--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:40:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:41:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -181,7 +181,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Russell Henley +4
 -3 thru 11</td>
       <td class="greyout">Brooks Koepka
@@ -204,22 +204,6 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Hideki Matsuyama +2
-E thru 1</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
@@ -236,6 +220,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Will Zalatoris +2
+E thru 1</td>
+      <td>Hideki Matsuyama +3
++1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-12</td>
       <td>Scottie Scheffler -9
@@ -245,7 +245,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 1</td>
       <td class="greyout">Xander Schauffele(W)
@@ -261,9 +261,9 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Tony Finau +6
 +2 thru 7</td>
     </tr>
@@ -281,7 +281,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -295,7 +295,7 @@ Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -309,27 +309,11 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 -1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Hideki Matsuyama +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout">Jon Rahm +5
--2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -343,7 +327,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -357,27 +341,27 @@ Not started</td>
       <td>Webb Simpson +2
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
 -2 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">The Resort</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
 Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Hideki Matsuyama +2
+      <td>Viktor Hovland +3
 E thru 1</td>
-      <td class="greyout leftborder">Marc Leishman +4
+      <td class="greyout leftborder">Hideki Matsuyama +3
 +1 thru 2</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
+      <td class="greyout">Jon Rahm +5
+-2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -391,7 +375,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -405,7 +389,7 @@ Not started</td>
       <td>Matthew Fitzpatrick +3
 -1 thru 7</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -419,7 +403,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -444,35 +428,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Hideki Matsuyama +3
++1 thru 2</td>
+      <td class="greyout leftborder">Marc Leishman +4
++1 thru 3</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
-      <td>Hideki Matsuyama +2
-E thru 1</td>
+      <td>Hideki Matsuyama +3
++1 thru 2</td>
       <td class="greyout leftborder">Tiger Woods +10
 +3 thru 12</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Talor Gooch +2
--1 thru 3</td>
-      <td>Hideki Matsuyama +2
-E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
--2 thru 12</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -483,13 +467,13 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +5
 -2 thru 12</td>
       <td class="greyout">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -503,7 +487,7 @@ E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -515,12 +499,28 @@ Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td>Billy Horschel +9
 -1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +2
+-1 thru 3</td>
+      <td>Hideki Matsuyama +3
++1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm(W) +5
+-2 thru 12</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -531,7 +531,7 @@ Not started</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -563,9 +563,9 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -581,7 +581,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -597,7 +597,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 1</td>
       <td class="greyout">Tiger Woods(W) +10
@@ -677,7 +677,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 1</td>
       <td class="greyout">Xander Schauffele(W)
@@ -737,7 +737,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 1</td>
       <td>Jon Rahm +5
@@ -753,7 +753,7 @@ Missed Cut</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 E thru 1</td>
       <td>Jon Rahm(W) +5
@@ -775,7 +775,7 @@ E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -785,13 +785,13 @@ Missed Cut</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +3
 E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -805,26 +805,10 @@ Not started</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td>Patrick Cantlay(W) +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Hideki Matsuyama +2
-E thru 1</td>
-      <td>Jon Rahm(W) +5
--2 thru 12</td>
-      <td>Patrick Cantlay +6
--2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -835,7 +819,7 @@ Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td>Adam Scott +13
 +1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -853,23 +837,39 @@ E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Daniel Berger +9
 +2 thru 11</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Hideki Matsuyama +3
++1 thru 2</td>
+      <td>Jon Rahm(W) +5
+-2 thru 12</td>
+      <td>Patrick Cantlay +6
+-2 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
-      <td>Hideki Matsuyama +2
-E thru 1</td>
+      <td>Hideki Matsuyama +3
++1 thru 2</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -901,7 +901,7 @@ E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -915,7 +915,7 @@ Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td>Tony Finau +6
 +2 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
