--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:40:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:41:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,9 +149,9 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Tony Finau +6
 +2 thru 7</td>
     </tr>
@@ -165,7 +165,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 -1 thru 7</td>
       <td class="greyout">Brooks Koepka
@@ -179,7 +179,7 @@ Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -231,7 +231,7 @@ Not started</td>
       <td>Viktor Hovland(W) +3
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -247,7 +247,7 @@ Not started</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout">Tyrrell Hatton +16
 +7 thru 15</td>
     </tr>
@@ -261,7 +261,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -291,7 +291,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
-Not started</td>
+E thru 1</td>
       <td>Tony Finau +6
 +2 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +9
@@ -341,7 +341,7 @@ E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -355,7 +355,7 @@ Not started</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
--2 thru 13</td>
+-2 thru 14</td>
       <td>Tony Finau +6
 +2 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth
