--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:41:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:42:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,38 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +6
+-2 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Tyrrell Hatton +16
++7 thru 15</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-14</td>
@@ -156,22 +188,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 14</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
@@ -185,22 +201,6 @@ E thru 1</td>
       <td class="greyout leftborder">Russell Henley +4
 -3 thru 11</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland(W) +3
-E thru 1</td>
-      <td class="greyout leftborder">Tyrrell Hatton +16
-+7 thru 15</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -244,9 +244,9 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Will Zalatoris +2
 E thru 1</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
@@ -300,6 +300,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +6
+-2 thru 14</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -6
@@ -311,24 +327,40 @@ Not started</td>
       <td>Will Zalatoris +2
 E thru 1</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
--1 thru 7</td>
+-1 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -9
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Hideki Matsuyama +3
++1 thru 2</td>
+      <td class="greyout">Jon Rahm +5
+-2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 14</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -348,35 +380,19 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
 Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout leftborder">Hideki Matsuyama +3
-+1 thru 2</td>
-      <td class="greyout">Jon Rahm +5
--2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -6
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
--2 thru 14</td>
-      <td class="greyout">Brooks Koepka
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -387,7 +403,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Matthew Fitzpatrick +3
--1 thru 7</td>
+-1 thru 8</td>
       <td>Patrick Cantlay +6
 -2 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -412,22 +428,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -6
@@ -444,6 +444,38 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td>Will Zalatoris +2
+E thru 1</td>
+      <td class="greyout leftborder">Jon Rahm(W) +5
+-2 thru 12</td>
+      <td class="greyout">Patrick Cantlay +6
+-2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td>Jon Rahm +5
+-2 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay(W) +6
+-2 thru 14</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -6
@@ -457,38 +489,6 @@ Not started</td>
       <td class="greyout leftborder">Tiger Woods +10
 +3 thru 12</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm(W) +5
--2 thru 12</td>
-      <td class="greyout">Patrick Cantlay +6
--2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td>Jon Rahm +5
--2 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +6
--2 thru 14</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -524,6 +524,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td>Jon Rahm(W) +5
+-2 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -6
@@ -537,22 +553,6 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td>Jon Rahm(W) +5
--2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -588,30 +588,14 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 1</td>
-      <td class="greyout">Tiger Woods(W) +10
-+3 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
       <td class="greyout leftborder">Bubba Watson +8
@@ -621,18 +605,50 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
       <td class="greyout leftborder">Tiger Woods +10
 +3 thru 12</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Will Zalatoris +2
+E thru 1</td>
+      <td class="greyout">Tiger Woods(W) +10
++3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">3</td>
+      <td>Shane Lowry(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td>Joaquin Niemann +4
+E thru 8</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -652,22 +668,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">4</td>
-      <td>Shane Lowry(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td>Joaquin Niemann +4
-E thru 8</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -1
@@ -676,9 +676,9 @@ Not started</td>
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Will Zalatoris +2
 E thru 1</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
@@ -700,6 +700,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td>Will Zalatoris +2
+E thru 1</td>
+      <td>Jon Rahm +5
+-2 thru 12</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">8</td>
       <td>Corey Conners(W) -1
@@ -716,45 +732,13 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">8</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Dustin Johnson(W) +1
-Not started</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 7</td>
-      <td>Tony Finau +6
-+2 thru 7</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td>Jon Rahm +5
--2 thru 12</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas -1
 Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
       <td>Will Zalatoris +2
-E thru 1</td>
-      <td>Viktor Hovland +3
 E thru 1</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
@@ -764,14 +748,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">8</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Dustin Johnson(W) +1
+Not started</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 8</td>
+      <td>Tony Finau +6
++2 thru 7</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">9</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay +6
@@ -781,12 +781,12 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">10</td>
       <td>Collin Morikawa +1
 Not started</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 2</td>
       <td>Will Zalatoris +2
-E thru 1</td>
-      <td>Viktor Hovland(W) +3
 E thru 1</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
@@ -812,6 +812,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
+      <td>Jon Rahm +5
+-2 thru 12</td>
+      <td>Patrick Cantlay +6
+-2 thru 14</td>
+      <td class="greyout leftborder">Daniel Berger +9
++2 thru 11</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">13</td>
       <td>Scottie Scheffler -9
@@ -828,22 +844,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
-      <td>Jon Rahm +5
--2 thru 12</td>
-      <td>Patrick Cantlay +6
--2 thru 14</td>
-      <td class="greyout leftborder">Daniel Berger +9
-+2 thru 11</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">13</td>
       <td>Justin Thomas -1
@@ -854,6 +854,22 @@ Not started</td>
 -2 thru 12</td>
       <td>Patrick Cantlay +6
 -2 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 2</td>
+      <td>Jon Rahm +5
+-2 thru 12</td>
+      <td>Patrick Reed +6
++2 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -876,28 +892,12 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Viktor Hovland(W) +3
-E thru 1</td>
-      <td>Jon Rahm +5
--2 thru 12</td>
-      <td>Patrick Reed +6
-+2 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">16</td>
       <td>Dustin Johnson +1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 2</td>
       <td>Jon Rahm +5
 -2 thru 12</td>
       <td>Patrick Cantlay +6
