--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:47:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:47:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -598,8 +598,8 @@ Not started</td>
 -1 thru 2</td>
       <td>Jon Rahm(W) +5
 -2 thru 12</td>
-      <td class="greyout leftborder">Bubba Watson +8
-E thru 13</td>
+      <td class="greyout leftborder">Bubba Watson +7
+-1 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
