--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:55:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:55:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
+      <td>Will Zalatoris +3
++1 thru 2</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 14</td>
       <td class="greyout">Tony Finau +6
@@ -157,13 +157,13 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
+      <td>Will Zalatoris +3
++1 thru 2</td>
       <td>Jon Rahm +4
 -3 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,17 +173,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
+      <td>Matthew Fitzpatrick +3
 -1 thru 8</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -197,7 +197,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Viktor Hovland +2
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -215,7 +215,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout">Joaquin Niemann +4
 E thru 9</td>
     </tr>
@@ -229,7 +229,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +2
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 14</td>
       <td class="greyout">Brooks Koepka
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Dustin Johnson +1
-Not started</td>
+      <td>Dustin Johnson +2
++1 thru 1</td>
       <td>Russell Henley +4
 -3 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Will Zalatoris +2
-E thru 1</td>
+      <td>Will Zalatoris +3
++1 thru 2</td>
       <td>Tony Finau +6
 +2 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +11
@@ -321,7 +321,7 @@ Missed Cut</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Jon Rahm +4
 -3 thru 13</td>
       <td>Patrick Reed +7
@@ -333,11 +333,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
-      <td>Dustin Johnson +1
-Not started</td>
+      <td class="bigbold">16</td>
       <td>Viktor Hovland +2
--1 thru 2</td>
+-1 thru 3</td>
+      <td>Dustin Johnson +2
++1 thru 1</td>
       <td>Jon Rahm +4
 -3 thru 13</td>
       <td>Patrick Cantlay +6
