--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:56:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:57:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,10 +262,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +3
 +1 thru 2</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
+      <td class="greyout leftborder">Tony Finau +5
++1 thru 8</td>
+      <td class="greyout">Patrick Cantlay +6
 -2 thru 14</td>
-      <td class="greyout">Tony Finau +6
-+2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -373,7 +373,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Matthew Fitzpatrick +3
--1 thru 8</td>
+-1 thru 9</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 2</td>
       <td class="greyout">Brooks Koepka
@@ -387,7 +387,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Matthew Fitzpatrick +3
--1 thru 8</td>
+-1 thru 9</td>
       <td>Patrick Cantlay +6
 -2 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -748,6 +748,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">8</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Dustin Johnson(W) +2
++1 thru 1</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 9</td>
+      <td>Tony Finau +5
++1 thru 8</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">9</td>
       <td>Rory McIlroy(W) +1
@@ -760,22 +776,6 @@ Not started</td>
 -3 thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 14</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">9</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Dustin Johnson(W) +2
-+1 thru 1</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 8</td>
-      <td>Tony Finau +6
-+2 thru 7</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Jon Rahm(W) +4
 -3 thru 13</td>
+      <td>Tony Finau +5
++1 thru 8</td>
       <td>Patrick Cantlay +6
 -2 thru 14</td>
-      <td>Tony Finau +6
-+2 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
