--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:56:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 1:57:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +3
 +1 thru 2</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
+      <td class="greyout leftborder">Tony Finau +5
++1 thru 8</td>
+      <td class="greyout">Patrick Cantlay +6
 -2 thru 14</td>
-      <td class="greyout">Tony Finau +6
-+2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -181,7 +181,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Matthew Fitzpatrick +3
--1 thru 8</td>
+-1 thru 9</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 2</td>
       <td class="greyout">Brooks Koepka
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +3
 +1 thru 2</td>
-      <td>Tony Finau +6
-+2 thru 7</td>
+      <td>Tony Finau +5
++1 thru 8</td>
       <td class="greyout leftborder">Daniel Berger +11
 +4 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -332,6 +332,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">16</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Jon Rahm(W) +4
+-3 thru 13</td>
+      <td>Tony Finau +5
++1 thru 8</td>
+      <td>Patrick Cantlay +6
+-2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">16</td>
       <td>Viktor Hovland +2
@@ -343,22 +359,6 @@ Missed Cut</td>
       <td>Patrick Cantlay +6
 -2 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Jon Rahm(W) +4
--3 thru 13</td>
-      <td>Patrick Cantlay +6
--2 thru 14</td>
-      <td>Tony Finau +6
-+2 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
