--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:02:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:02:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,13 +269,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Robert MacIntyre +3
 -3 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -285,13 +285,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +6
@@ -476,6 +476,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 3</td>
+      <td>Jon Rahm(W) +4
+-3 thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy(W) E
+-1 thru 1</td>
+      <td>Hideki Matsuyama +4
++2 thru 3</td>
+      <td class="greyout leftborder">Tiger Woods +10
++3 thru 13</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -6
@@ -490,38 +522,6 @@ Not started</td>
 -3 thru 13</td>
       <td class="greyout">Patrick Cantlay +6
 -2 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +2
--1 thru 3</td>
-      <td>Jon Rahm(W) +4
--3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy(W) +1
-Not started</td>
-      <td>Hideki Matsuyama +4
-+2 thru 3</td>
-      <td class="greyout leftborder">Tiger Woods +10
-+3 thru 13</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -557,11 +557,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith -6
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 3</td>
       <td>Jon Rahm(W) +4
@@ -569,6 +569,38 @@ Not started</td>
       <td class="greyout leftborder">Bubba Watson +7
 -1 thru 14</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
+      <td>Will Zalatoris +3
++1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 thru 13</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
+      <td>Collin Morikawa(W) +1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 3</td>
+      <td class="greyout leftborder">Tiger Woods +10
++3 thru 13</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -588,46 +620,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 2</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 thru 13</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Collin Morikawa(W) +1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +2
--1 thru 3</td>
-      <td class="greyout leftborder">Tiger Woods +10
-+3 thru 13</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Jon Rahm(W) +4
 -3 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -637,11 +637,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland +2
@@ -661,7 +661,7 @@ Not started</td>
       <td>Viktor Hovland +2
 -1 thru 3</td>
       <td>Joaquin Niemann +4
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
@@ -669,11 +669,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland +2
@@ -712,6 +712,22 @@ Not started</td>
 -3 thru 13</td>
       <td class="greyout leftborder">Daniel Berger +14
 +7 thru 13</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">8</td>
+      <td>Rory McIlroy(W) E
+-1 thru 1</td>
+      <td>Viktor Hovland +2
+-1 thru 3</td>
+      <td>Dustin Johnson +2
++1 thru 1</td>
+      <td>Jon Rahm +4
+-3 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +6
+-2 thru 15</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -764,19 +780,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">9</td>
-      <td>Rory McIlroy(W) +1
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Viktor Hovland +2
--1 thru 3</td>
-      <td>Dustin Johnson +2
-+1 thru 1</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Jon Rahm +4
 -3 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
+      <td>Patrick Cantlay(W) +6
 -2 thru 15</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -792,22 +808,6 @@ Not started</td>
 -3 thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 -2 thru 15</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">10</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Jon Rahm +4
--3 thru 13</td>
-      <td>Patrick Cantlay(W) +6
--2 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
