--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:02:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:02:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
+      <td>Tommy Fleetwood(W) +1
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-1 thru 3</td>
+      <td class="greyout">Joaquin Niemann +4
+E thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -6
@@ -202,22 +218,6 @@ Not started</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Tommy Fleetwood(W) +1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--1 thru 3</td>
-      <td class="greyout">Joaquin Niemann +4
-E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -253,12 +253,12 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith(W) -6
 Not started</td>
+      <td>Rory McIlroy E
+-1 thru 1</td>
       <td>Collin Morikawa +1
-Not started</td>
-      <td>Rory McIlroy +1
 Not started</td>
       <td>Patrick Cantlay +6
 -2 thru 15</td>
