--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:02:54 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:03:37 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -595,7 +595,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 1</td>
       <td>Collin Morikawa(W) +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 3</td>
       <td class="greyout leftborder">Tiger Woods +10
@@ -643,7 +643,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 1</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 3</td>
       <td class="greyout leftborder">Will Zalatoris +3
@@ -675,7 +675,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 1</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -1 thru 3</td>
       <td class="greyout leftborder">Will Zalatoris +3
@@ -705,7 +705,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre +3
 -3 thru 12</td>
       <td>Jon Rahm +4
@@ -799,7 +799,7 @@ Missed Cut</td>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">10</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +2
 -1 thru 3</td>
       <td>Will Zalatoris +3
@@ -863,7 +863,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +2
 -1 thru 3</td>
       <td>Jon Rahm +4
@@ -879,7 +879,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">15</td>
       <td>Collin Morikawa(W) +1
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama +4
 +2 thru 3</td>
       <td>Jon Rahm +4
@@ -911,7 +911,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">16</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +4
 -3 thru 13</td>
       <td>Tony Finau +5
