--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:02:54 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:03:37 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -227,7 +227,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +2
 -1 thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +6
@@ -259,7 +259,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 1</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +6
 -2 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre +3
 -3 thru 12</td>
       <td>Jon Rahm +4
@@ -305,7 +305,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris +3
 +1 thru 2</td>
       <td>Tony Finau +5
@@ -319,7 +319,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +2
 -1 thru 3</td>
       <td>Jon Rahm +4
@@ -335,7 +335,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">16</td>
       <td>Collin Morikawa +1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +4
 -3 thru 13</td>
       <td>Tony Finau +5
