--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:05:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:05:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Hideki Matsuyama +3
++1 thru 4</td>
+      <td>Will Zalatoris +3
++1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
@@ -233,22 +249,6 @@ E thru 4</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 2</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Will Zalatoris +3
-+1 thru 2</td>
-      <td>Hideki Matsuyama +4
-+2 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -342,8 +342,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 E thru 4</td>
-      <td class="greyout leftborder">Hideki Matsuyama +4
-+2 thru 3</td>
+      <td class="greyout leftborder">Hideki Matsuyama +3
++1 thru 4</td>
       <td class="greyout">Jon Rahm +4
 -3 thru 14</td>
     </tr>
@@ -429,17 +429,33 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Marc Leishman +4
+      <td>Hideki Matsuyama +3
++1 thru 4</td>
+      <td class="greyout leftborder">Marc Leishman +4
 +1 thru 5</td>
-      <td class="greyout leftborder">Hideki Matsuyama +4
-+2 thru 3</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy(W) E
+-1 thru 1</td>
+      <td>Hideki Matsuyama +3
++1 thru 4</td>
+      <td class="greyout leftborder">Tiger Woods +10
++3 thru 13</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -476,22 +492,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy(W) E
--1 thru 1</td>
-      <td>Hideki Matsuyama +4
-+2 thru 3</td>
-      <td class="greyout leftborder">Tiger Woods +10
-+3 thru 13</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -9
@@ -505,6 +505,22 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +2
+-1 thru 5</td>
+      <td>Hideki Matsuyama +3
++1 thru 4</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 14</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -522,22 +538,6 @@ E thru 4</td>
 -3 thru 14</td>
       <td class="greyout">Patrick Cantlay +6
 -2 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Talor Gooch +2
--1 thru 5</td>
-      <td>Jon Rahm(W) +4
--3 thru 14</td>
-      <td class="greyout leftborder">Hideki Matsuyama +4
-+2 thru 3</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -829,13 +829,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 Not started</td>
+      <td>Hideki Matsuyama +3
++1 thru 4</td>
       <td>Jon Rahm(W) +4
 -3 thru 14</td>
-      <td>Hideki Matsuyama +4
-+2 thru 3</td>
       <td>Patrick Cantlay +6
 -2 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -861,11 +861,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa(W) +1
 E thru 1</td>
-      <td>Hideki Matsuyama +4
-+2 thru 3</td>
+      <td>Hideki Matsuyama +3
++1 thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Cantlay +6
