--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:11:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:12:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -324,10 +324,10 @@ Not started</td>
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 9</td>
-      <td class="greyout leftborder">Will Zalatoris +3
+      <td>Will Zalatoris +3
 +1 thru 3</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +5
++1 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -428,22 +428,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 9</td>
-      <td>Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -6
@@ -473,6 +457,22 @@ E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
 -1 thru 16</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Matthew Fitzpatrick +5
++1 thru 10</td>
+      <td>Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,22 +716,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">8</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Dustin Johnson(W) +2
-+1 thru 2</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 9</td>
-      <td>Tony Finau +5
-+1 thru 9</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">9</td>
       <td>Rory McIlroy(W) E
@@ -793,6 +777,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">10</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Dustin Johnson(W) +2
++1 thru 2</td>
+      <td>Tony Finau +5
++1 thru 9</td>
+      <td>Matthew Fitzpatrick +5
++1 thru 10</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
