--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:11:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:12:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 1</td>
       <td>Tommy Fleetwood(W) +1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 4</td>
       <td class="greyout">Joaquin Niemann +4
@@ -196,10 +196,10 @@ Not started</td>
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 9</td>
-      <td class="greyout leftborder">Will Zalatoris +3
+      <td>Will Zalatoris +3
 +1 thru 3</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +5
++1 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
