--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:18:40 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:19:23 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -300,6 +300,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Dustin Johnson(W) +1
+E thru 3</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -6
@@ -329,22 +345,6 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Dustin Johnson(W) +2
-+1 thru 2</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -701,13 +701,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Rory McIlroy(W) E
 -1 thru 2</td>
+      <td>Dustin Johnson +1
+E thru 3</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
-      <td>Dustin Johnson +2
-+1 thru 2</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -780,6 +780,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">9</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Dustin Johnson(W) +1
+E thru 3</td>
+      <td>Tony Finau +5
++1 thru 9</td>
+      <td>Matthew Fitzpatrick +5
++1 thru 10</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">10</td>
       <td>Justin Thomas -1
@@ -793,22 +809,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">10</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Dustin Johnson(W) +2
-+1 thru 2</td>
-      <td>Tony Finau +5
-+1 thru 9</td>
-      <td>Matthew Fitzpatrick +5
-+1 thru 10</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -877,11 +877,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Scottie Scheffler -9
 Not started</td>
-      <td>Dustin Johnson +2
-+1 thru 2</td>
+      <td>Dustin Johnson +1
+E thru 3</td>
       <td>Patrick Cantlay +7
 -1 thru 16</td>
       <td>Adam Scott +14
@@ -889,6 +889,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson +1
+E thru 3</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td>Jon Rahm +4
+-3 thru 14</td>
+      <td>Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -905,22 +921,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Viktor Hovland +2
--1 thru 5</td>
-      <td>Dustin Johnson +2
-+1 thru 2</td>
-      <td>Jon Rahm +4
--3 thru 14</td>
-      <td>Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
