--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:18:40 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:19:23 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Dustin Johnson +2
-+1 thru 2</td>
+      <td>Dustin Johnson +1
+E thru 3</td>
       <td>Russell Henley +4
 -3 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,11 +349,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson +1
+E thru 3</td>
       <td>Viktor Hovland +2
 -1 thru 5</td>
-      <td>Dustin Johnson +2
-+1 thru 2</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Cantlay +7
